add options and r3a compressors fixed